# models/social_media_request.go
@@ -1,0 +1,7 @@
+package models
+
+// SocialMediaRequest represents the model for an socialMediaRequest
+type SocialMediaRequest struct {
+	Name           string `gorm:"not null" json:"name" form:"name" valid:"required~Name is required"`
+	SocialMediaUrl string `gorm:"not null;type:text" json:"socialMediaUrl" form:"socialMediaUrl" valid:"required~SocialMediaUrl is required"`
+}
